[tool.poetry]
name = "python-tools"
version = "0.1.0"
description = "Integrating Different Python Tools"
authors = ["ilay.gilman <ilay.gilman@agamin.co.il>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
alembic = "^1.7.4"
SQLAlchemy = "^1.4.25"
mypy = "^0.910"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
